--- a/styles.css
+++ b/styles.css
@@ -21,31 +21,42 @@ body {
     width: 700px;
 }
 
-ul {
-    font-size: 14px;
-    font-weight: 700;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(245, 160, 1);
-  }
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: auto;
+  background-color: none;
+  padding: 15px 40px;
+  align-items: center;
+}
 
-  li {
-    float: left;
-  }
+#logonavbar:hover {
+  cursor: pointer;
+}
 
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
+li {
+  display: inline;
+  list-style: none;
+  margin-left: 20px;
+  padding: 8px 15px;
+}
 
-  li a:hover {
-    background-color: #111;
-  }
+li:hover {
+  background: #ffefeb;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#navbarbutton:hover {
+  cursor: pointer;
+}
+
+#logonavbar {
+  width: 100px;
+  height: auto;
+}
 
 h1 {
     font-size: 80px;
@@ -66,6 +77,7 @@ button {
     font-size: 16px;
     color: white;
     background-color: orange;
+    cursor: pointer;
     
 }
 
@@ -109,4 +121,19 @@ button {
   height: auto;
   border-radius: 5px;
   margin-top: 15px;
+}
+
+.container1 {
+  display: block;
+  height: 100px;
+  width: 100px;
+  background: lightblue;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+#testtext1 {
+  font-size: 16px;
 }
