--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,17 @@ button {
 #testtext1 {
   font-size: 16px;
 }
+
+.cities {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 10px;
+  margin: 0px 50px;
+  row-gap: 20px;
+}
+
+.cities img {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+}
