--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,13 @@ h1 {
     font-size: 80px;
     font-weight: 500;
     margin: 40px 0px 20px 0px;
+    color: #f08080;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 600;
+  color: rgb(40, 40, 40);
 }
 
 h4 {
@@ -140,7 +147,7 @@ button {
 
 .cities {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   column-gap: 10px;
   margin: 0px 50px;
   row-gap: 20px;
@@ -148,6 +155,6 @@ button {
 
 .cities img {
   width: 100%;
-  height: 200px;
+  height: auto;
   border-radius: 10px;
 }
