--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
     font-family: Arial, Helvetica, sans-serif; 
-    background: linear-gradient(white, orange);   
+    background: rgb(255, 236, 200);   
     text-align: center;
     justify-content: center;
+    margin: 0;
 }
 
 #hero {
@@ -11,13 +12,33 @@ body {
   margin: 0px 0px 50px 0px;
 }
 
+#herosubtitle {
+  font-size: 20px;
+  color: #676767;
+}
+
 #herobutton {
-    justify-content: center;
+  justify-content: center;
 }
 
 #heroimage {
-    margin: 50px 0;
-    width: 700px;
+  margin: 50px 0;
+  width: 800px;
+}
+
+.herobtnmoreinfo {
+  padding: 10px 25px;
+  font-weight: 600;
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+.herobtncalculate {
+  padding: 10px 25px;
+  font-weight: 600;
+  margin-left: 10px;
+  background-color: rgb(243, 243, 243);
+  color: #676767;
 }
 
 .navbar {
@@ -26,12 +47,14 @@ body {
   justify-content: space-between;
   width: auto;
   background-color: none;
-  padding: 15px 40px;
+  padding: 15px 80px;
   align-items: center;
+  color: #676767;
 }
 
 #logonavbar:hover {
   cursor: pointer;
+  color: #676767;
 }
 
 li {
@@ -53,14 +76,14 @@ li:hover {
 }
 
 #logonavbar {
-  width: 100px;
+  width: 80px;
   height: auto;
 }
 
 h1 {
     font-size: 80px;
-    font-weight: 500;
-    margin: 40px 0px 20px 0px;
+    font-weight: 800;
+    margin: 60px 0px 20px 0px;
     color: #f08080;
 }
 
@@ -97,7 +120,7 @@ button:hover {
   color: white;
 }
 
-#featurestitle{
+#featurestitle {
   margin-top: 100px;
 }
 
@@ -149,12 +172,17 @@ button:hover {
   font-size: 16px;
 }
 
+.citiestitle {
+  margin-top: 100px;
+}
+
 .cities {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   column-gap: 10px;
   margin: 0px 50px;
   row-gap: 20px;
+  padding: 50px;
 }
 
 .cities img {
@@ -216,6 +244,7 @@ button:hover {
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 200px;
+  background-color: #ef9898;
 }
 
 .footerinfo {
