--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 #heroimage {
   margin: 50px 0;
-  width: 800px;
+  width: 700px;
 }
 
 .herobtnmoreinfo {
@@ -41,6 +41,14 @@ body {
   color: #676767;
 }
 
+.herobtncalculate:hover {
+  padding: 10px 25px;
+  font-weight: 600;
+  margin-left: 10px;
+  background-color: #e9e9e9;
+  color: #676767;
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
@@ -54,7 +62,6 @@ body {
 
 #logonavbar:hover {
   cursor: pointer;
-  color: #676767;
 }
 
 li {
@@ -240,21 +247,65 @@ button:hover {
   font-size: 15px;
 }
 
-#footer {
+footer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 200px;
+  grid-template-columns: repeat(5,1fr);
+  height: 300px;
   background-color: #ef9898;
+  border-radius: 10px 10px 0px 0px;
+  padding-bottom: 20px;
 }
 
 .footerinfo {
-  width: 300px;
+  width: 400px;
+  text-align: left;
   height: auto;
   padding-top: 10px;
-  margin-left: 80px;
+  margin: 0px 0px 0px 80px;
 }
 
 .footersocialmedia img {
   width: 30px;
   padding-left: 5px;
+  cursor: pointer;
+}
+
+.h2footer {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #f4f3f3;
+}
+
+.h4footer {
+  color: #f4f3f3;
+  margin-bottom: 60px;
+}
+
+.flowlogofooter {
+  width: 100px;
+}
+
+.footerlinkstitle {
+  margin-top: 40px;
+  color: #f4f3f3;
+  text-align: left;
+}
+
+h5 {
+  text-align: left;
+  font-weight: 300;
+  color: #f4f3f3;
+  cursor: pointer;
+}
+
+.complianceline {
+  background-color: #ef9898;
+  padding: 20px 0px 20px 80px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  font-size: 12px;
+  justify-content: left;
+  color: #f4f3f3;
+  cursor: pointer;
 }
