--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   margin: 0px 0px 50px 0px;
 }
 
-#herosubtitle {
+.subtitle {
   font-size: 20px;
   color: #676767;
 }
@@ -60,6 +60,18 @@ nav {
   color: #676767;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:active {
+  color: inherit;
+}
+
+a:visited {
+  color: inherit;
+}
+
 #logonavbar:hover {
   cursor: pointer;
 }
@@ -72,7 +84,7 @@ li {
 }
 
 li:hover {
-  background: #ffefeb;
+  background: #fff8f7;
   padding: 8px 15px;
   border-radius: 5px;
   cursor: pointer;
@@ -111,8 +123,8 @@ button {
     padding: 6px 20px;
     font-weight: bold;
     font-size: 16px;
-    color: white;
-    background-color: orange;
+    color: #ffffff;
+    background-color: #ffa500;
     cursor: pointer;
     
 }
@@ -254,6 +266,7 @@ footer {
   background-color: #ef9898;
   border-radius: 10px 10px 0px 0px;
   padding-bottom: 20px;
+  margin-top: 100px;
 }
 
 .footerinfo {
@@ -308,4 +321,42 @@ h5 {
   justify-content: left;
   color: #f4f3f3;
   cursor: pointer;
+}
+
+#contactmethods {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contactmethod {
+  border-radius: 10px;
+  background-color: #feefb5;
+  box-shadow: 0px 0px 3px #c8c8c8;
+  padding: 40px;
+  width: 200px;
+  height: 300px;
+  margin: 60px 0px 0px 50px;
+}
+
+.contactmethod:hover {
+  box-shadow: 0px 0px 8px #c8c8c8;
+  transition: 0.3s;
+}
+
+.contactmethod img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 70px;
+}
+
+.pcontactmethods {
+  font-size: 15px;
+  margin-bottom: 30px;
+  color: #676767;
+}
+
+.btncontact {
+  background-color: orange;
+  padding: 12px 25px;
 }
