--- a/styles.css
+++ b/styles.css
@@ -158,11 +158,6 @@ button:hover {
   box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Simple shadow for depth */
 }
 
-.feature h3 {
-  color: #333;
-  margin-top: 0;
-}
-
 .feature p {
   color: #666;
   font-size: 0.9rem;
@@ -170,10 +165,16 @@ button:hover {
 }
 
 .feature img {
-  width: 200px; /* Responsive images */
-  height: auto;
+  width: 250px; /* Responsive images */
+  height: 250px;
   border-radius: 5px;
   margin-top: 15px;
+}
+
+.titlefeature {
+  margin-top: 15px;
+  font-size: 22px;
+  color: #f08080;
 }
 
 .container1 {
@@ -185,10 +186,6 @@ button:hover {
   margin-right: auto;
   border: 2px solid black;
   border-radius: 10px;
-}
-
-#testtext1 {
-  font-size: 16px;
 }
 
 .citiestitle {
