--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,119 @@ body {
     margin: 0;
 }
 
+
+/* header styles */
+
+h1 {
+  font-size: 80px;
+  font-weight: 800;
+  margin: 60px 0px 20px 0px;
+  color: #f08080;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: 600;
+  color: #ef9898;
+}
+
+.h2footer {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #f4f3f3;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: 100;
+}
+
+h4 {
+  font-weight: 300;
+  color: #f4f3f3;
+  cursor: pointer;
+}
+
+/* end header styles */
+
+
+/* paragraph styles */
+
+.feature p {
+  color: #666;
+  font-size: 0.9rem;
+  line-height: 1.4;
+}
+
+.pfooter {
+  color: #f4f3f3;
+  margin-bottom: 60px;
+}
+
+.pcontactmethods {
+  font-size: 15px;
+  margin-bottom: 30px;
+  color: #676767;
+}
+
+.pfooterlinks {
+  font-size: 14px;
+  color: #f4f3f3;
+  text-align: left;
+  cursor: pointer;
+}
+
+p {
+  font-size: 16px;
+  color: #676767;
+  line-height: 25px;
+}
+
+/* end paragraph styles */
+
+/* divs with title, text (left) and image (right) */
+
+.txtimgdiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 150px 100px;
+}
+
+.txtblock {
+  width: 600px;
+  text-align: left;
+}
+
+.imgblock img {
+  width: 500px;
+  height: auto;
+}
+
+.imgtxtdiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 200px 100px;
+}
+
+.txtblock {
+  width: 600px;
+  text-align: left;
+}
+
+.imgblock img {
+  width: 500px;
+  height: auto;
+}
+
+.centered img {
+  width: 500px;
+  height: auto;
+}
+
+/* end divs with title, text (left) and image (right) */
+
 #hero {
   text-align: center;
   justify-content: center;
@@ -21,15 +134,14 @@ body {
   justify-content: center;
 }
 
-#heroimage {
+.headerimg {
   margin: 50px 0;
   width: 700px;
 }
 
-.herobtnmoreinfo {
+.btnorange {
   padding: 10px 25px;
   font-weight: 600;
-  margin-left: 10px;
   border-radius: 10px;
 }
 
@@ -99,24 +211,6 @@ li:hover {
   height: auto;
 }
 
-h1 {
-    font-size: 80px;
-    font-weight: 800;
-    margin: 60px 0px 20px 0px;
-    color: #f08080;
-}
-
-h2 {
-  font-size: 40px;
-  font-weight: 600;
-  color: #ef9898;
-}
-
-h4 {
-    font-size: 16px;
-    font-weight: 100;
-}
-
 button {
     border: none;
     border-radius: 10px;
@@ -156,12 +250,6 @@ button:hover {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Simple shadow for depth */
-}
-
-.feature p {
-  color: #666;
-  font-size: 0.9rem;
-  line-height: 1.4;
 }
 
 .feature img {
@@ -221,7 +309,7 @@ button:hover {
 
 .f1text {
   text-align: start;
-  width: 500px;
+  width: 550px;
 }
 
 .f1text h2 {
@@ -280,17 +368,6 @@ footer {
   cursor: pointer;
 }
 
-.h2footer {
-  margin-top: 20px;
-  margin-bottom: 10px;
-  color: #f4f3f3;
-}
-
-.pfooter {
-  color: #f4f3f3;
-  margin-bottom: 60px;
-}
-
 .flowlogofooter {
   width: 100px;
 }
@@ -299,13 +376,6 @@ footer {
   margin-top: 40px;
   color: #f4f3f3;
   text-align: left;
-}
-
-h5 {
-  text-align: left;
-  font-weight: 300;
-  color: #f4f3f3;
-  cursor: pointer;
 }
 
 .complianceline {
@@ -345,12 +415,6 @@ h5 {
   width: 100px;
   height: auto;
   margin-bottom: 70px;
-}
-
-.pcontactmethods {
-  font-size: 15px;
-  margin-bottom: 30px;
-  color: #676767;
 }
 
 .btncontact {
