--- a/styles.css
+++ b/styles.css
@@ -390,6 +390,11 @@ footer {
   cursor: pointer;
 }
 
+.compliancetxt {
+  font-size: 12px;
+  color: #fff;
+}
+
 #contactmethods {
   display: flex;
   flex-direction: row;
@@ -398,7 +403,7 @@ footer {
 
 .contactmethod {
   border-radius: 10px;
-  background-color: #feefb5;
+  background-color: #fff;
   box-shadow: 0px 0px 3px #c8c8c8;
   padding: 40px;
   width: 200px;
