--- a/styles.css
+++ b/styles.css
@@ -445,3 +445,40 @@ textarea {
 #contactform {
   margin-top: 150px;
 }
+
+/* Bento box */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 200px);
+  gap: 20px;
+  margin: 80px 100px;
+}
+
+.grid-item {
+  background-color: #fdf5f5;
+  border: 1px solid #e6e6e6;
+  text-align: center;
+  border-radius: 10px;
+  text-align: start;
+  padding: 0px 20px;
+}
+
+.grid-item:nth-child(1) {
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 1;
+}
+
+.grid-item:nth-child(2) {
+  grid-row: 1 / span 3;
+  grid-column: 2 / span 1;
+}
+
+.grid-item h2 {
+  font-size: 22px;
+}
+
+.grid-item p {
+  font-size: 14px;
+}
